maze.lessons.maze.island.IslandMaze.scala.error
Escaper:14: error: value North is not a member of object plm.universe.Direction
				if (getDirection == Direction.North && !estFaceMur) avance
                                                              ^