maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall() ={
	if (!estFaceMur) avance
	else droite
	gauche
	if (estFaceMur) droite
}

	while (!estSurBiscuit) {
		if (estFaceMur) {
			while (!estSurBiscuit) {
				keepHandOnSideWall
				if (getDirection == Direction.North && !estFaceMur) avance
			}
		}		
	}
	prendBiscuit
	
}
